--- a/index.html
+++ b/index.html
@@ -164,13 +164,9 @@
 
     <footer class="footer">
         <div class="container">
-            <p>© 2025 からあげ | Powered by Kindle & GitHub Pages</p>
-            <p class="affiliate-disclosure">
-                ⚠️ <strong>アフィリエイト開示:</strong> このサイトはAmazon.co.jpアソシエイトプログラムに参加しており、
-                適格販売により収入を得る場合があります。
-            </p>
+            <p>© 2025 sgktmk | Powered by Kindle & GitHub Pages</p>
             <p>
-                <a href="https://github.com/karaage0703/karaage-virtual-bookshelf" target="_blank" rel="noopener">
+                <a href="https://github.com/sgktmk/my-bookshelf" target="_blank" rel="noopener">
                     GitHub Repository
                 </a>
             </p>
